@@ -46,7 +46,6 @@ import org.hisp.dhis.program.Program;
 import org.hisp.dhis.program.ProgramStage;
 import org.hisp.dhis.programrule.ProgramRule;
 import org.hisp.dhis.programrule.ProgramRuleService;
-import org.hisp.dhis.relationship.RelationshipKey;
 import org.hisp.dhis.relationship.RelationshipType;
 import org.hisp.dhis.trackedentity.TrackedEntityAttribute;
 import org.hisp.dhis.trackedentity.TrackedEntityType;
@@ -57,10 +56,7 @@ import org.hisp.dhis.tracker.domain.MetadataIdentifier;
 import org.hisp.dhis.tracker.domain.Note;
 import org.hisp.dhis.tracker.domain.Relationship;
 import org.hisp.dhis.tracker.domain.TrackedEntity;
-import org.hisp.dhis.tracker.preheat.RelationshipPreheatKeySupport;
 import org.springframework.stereotype.Component;
-
-import com.google.common.collect.ImmutableSet;
 
 /**
  * This class "collects" identifiers from all input objects. This resulting map
@@ -91,8 +87,8 @@ public class TrackerIdentifierCollector
         collectRelationships( identifiers, params.getRelationships() );
         // Using "*" signals that all the entities of the given type have to be
         // preloaded in the Preheat
-        identifiers.put( TrackedEntityType.class, ImmutableSet.of( ID_WILDCARD ) );
-        identifiers.put( RelationshipType.class, ImmutableSet.of( ID_WILDCARD ) );
+        identifiers.put( TrackedEntityType.class, Set.of( ID_WILDCARD ) );
+        identifiers.put( RelationshipType.class, Set.of( ID_WILDCARD ) );
 
         collectProgramRulesFields( identifiers );
         return identifiers;
@@ -100,13 +96,18 @@ public class TrackerIdentifierCollector
 
     private void collectProgramRulesFields( Map<Class<?>, Set<String>> map )
     {
+        // collecting program rule dataElement/attributes deliberately using
+        // UIDs
+        // Rule engine rules only know UIDs, so we need to be able to get
+        // dataElements/attributes from rule actions
+        // out of the preheat using UIDs
         List<ProgramRule> programRules = programRuleService.getProgramRulesLinkedToTeaOrDe();
+
         Set<String> dataElements = programRules.stream()
             .flatMap( pr -> pr.getProgramRuleActions().stream() )
             .filter( a -> Objects.nonNull( a.getDataElement() ) )
             .map( a -> a.getDataElement().getUid() )
             .collect( Collectors.toSet() );
-
         dataElements.forEach( de -> addIdentifier( map, DataElement.class, de ) );
 
         Set<String> attributes = programRules.stream()
@@ -114,7 +115,6 @@ public class TrackerIdentifierCollector
             .filter( a -> Objects.nonNull( a.getAttribute() ) )
             .map( a -> a.getAttribute().getUid() )
             .collect( Collectors.toSet() );
-
         attributes.forEach( attribute -> addIdentifier( map, TrackedEntityAttribute.class, attribute ) );
     }
 
@@ -186,19 +186,18 @@ public class TrackerIdentifierCollector
 
             addIdentifier( identifiers, Relationship.class, relationship.getRelationship() );
 
-            if ( RelationshipPreheatKeySupport.hasRelationshipKey( relationship ) )
+            if ( Objects.nonNull( relationship.getFrom() ) )
             {
+                addIdentifier( identifiers, TrackedEntity.class, relationship.getFrom().getTrackedEntity() );
+                addIdentifier( identifiers, Enrollment.class, relationship.getFrom().getEnrollment() );
+                addIdentifier( identifiers, Event.class, relationship.getFrom().getEvent() );
+            }
 
-                RelationshipKey relationshipKey = RelationshipPreheatKeySupport.getRelationshipKey( relationship );
-                addIdentifier( identifiers, Relationship.class, relationshipKey.asString() );
-
-                addIdentifier( identifiers, TrackedEntity.class, relationshipKey.getFrom().getTrackedEntity() );
-                addIdentifier( identifiers, Enrollment.class, relationshipKey.getFrom().getEnrollment() );
-                addIdentifier( identifiers, Event.class, relationshipKey.getFrom().getEvent() );
-
-                addIdentifier( identifiers, TrackedEntity.class, relationshipKey.getTo().getTrackedEntity() );
-                addIdentifier( identifiers, Enrollment.class, relationshipKey.getTo().getEnrollment() );
-                addIdentifier( identifiers, Event.class, relationshipKey.getTo().getEvent() );
+            if ( Objects.nonNull( relationship.getTo() ) )
+            {
+                addIdentifier( identifiers, TrackedEntity.class, relationship.getTo().getTrackedEntity() );
+                addIdentifier( identifiers, Enrollment.class, relationship.getTo().getEnrollment() );
+                addIdentifier( identifiers, Event.class, relationship.getTo().getEvent() );
             }
         } );
     }
